Add builder pattern for Character