@@ -1,7 +1,7 @@
 package seedu.address.model.util;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 import seedu.address.model.ReadOnlyReroll;
 import seedu.address.model.Reroll;
@@ -10,6 +10,7 @@ import seedu.address.model.entity.Inventory;
 import seedu.address.model.entity.Item;
 import seedu.address.model.entity.Mob;
 import seedu.address.model.entity.Name;
+import seedu.address.model.entity.Progression;
 import seedu.address.model.entity.Stats;
 import seedu.address.model.tag.Tag;
 
@@ -26,9 +27,13 @@ public class SampleDataUtil {
     public static void getSampleEntities() {
         Item sword = new Item(new Name("Sword"), 2, 3, new HashSet<>());
         Item bow = new Item(new Name("Bow"), 4, 3, new HashSet<>());
-        Inventory i1 = new Inventory(Arrays.asList(new Item[] {sword}));
-        Inventory i2 = new Inventory(Arrays.asList(new Item[] {bow}));
-        Character c = new Character(new Name("Mike"), new Stats(3, 3, 3), 3, 2, i2, new HashSet<Tag>());
+        Inventory i1 = new Inventory(List.of(sword));
+        Inventory i2 = new Inventory(List.of(bow));
+        Character c = new Character.CharacterBuilder(new Name("Mike"))
+                .setStats(new Stats(3, 3, 3))
+                .setProgression(new Progression(3, 2))
+                .setInventory(i2)
+                .build();
         Mob m1 = new Mob(new Name("Skeleton Archer"), new Stats(300, 300, 300), 2, true, i2, new HashSet<Tag>());
         Mob m2 = new Mob(new Name("Skeleton Warrior"), new Stats(300, 300, 300), 2, true, i1, new HashSet<Tag>());
         sampleCharacter = new Character[] {c};
